# SnakeEater

./: .clang-format  CMakeLists.txt  README.md
src/: main.cc
src/controller/: GameController.cc  GameController.h
src/model/: Delta.h  Direction.h  Food.cc  Food.h  Map.cc  Map.h  Point.h  Snake.cc  Snake.h
src/utils/: ConsoleClear.cc  ConsoleClear.h  ConsoleColour.h
src/view/: IRenderer.h  TUIRenderer.cc  TUIRenderer.h
